[gd_scene load_steps=5 format=3 uid="uid://d38erjkct3v6a"]

[ext_resource type="Script" path="res://base/menus/base_menu.gd" id="1_bxi2l"]
[ext_resource type="PackedScene" uid="uid://bbvb0ldgm05ut" path="res://base/menus/view_sub_menu.tscn" id="4_ih05j"]
[ext_resource type="PackedScene" uid="uid://b5pp2l51wdxsk" path="res://base/menus/build_sub_menu.tscn" id="4_pmwej"]
[ext_resource type="PackedScene" uid="uid://btabol7j5s3xa" path="res://util/menus/right_menu_button.tscn" id="4_yr51v"]

[node name="BaseMenu" type="Node2D"]
script = ExtResource("1_bxi2l")

[node name="RootMenu" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(168, 0)

[node name="Build" parent="RootMenu" instance=ExtResource("4_yr51v")]
layout_mode = 2
text = "Build"

[node name="View" parent="RootMenu" instance=ExtResource("4_yr51v")]
layout_mode = 2
text = "View"

[node name="Back" parent="RootMenu" instance=ExtResource("4_yr51v")]
layout_mode = 2
text = "Back"

[node name="BuildSubMenu" parent="." instance=ExtResource("4_pmwej")]
offset_right = 168.0
offset_bottom = 26.0

[node name="ViewSubMenu" parent="." instance=ExtResource("4_ih05j")]
offset_right = 168.0
offset_bottom = 26.0

[connection signal="pressed" from="RootMenu/Build" to="." method="_on_build_pressed"]
[connection signal="pressed" from="RootMenu/View" to="." method="_on_view_pressed"]
[connection signal="pressed" from="RootMenu/Back" to="." method="_on_back_pressed"]
[connection signal="back_pressed" from="BuildSubMenu" to="." method="_on_build_sub_menu_back_pressed"]
[connection signal="menu_object_pressed" from="BuildSubMenu" to="." method="_on_build_sub_menu_menu_object_pressed"]
